Agregando algunas reglas a eslint

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,9 @@
     "SharedArrayBuffer": "readonly",
     "firebase": "readonly"
   },
-  "plugins": ["jest"],
+  "plugins": [
+    "jest"
+  ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
@@ -26,6 +28,8 @@
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
     "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "error"
+    "jest/valid-expect": "error",
+    "no-console": "off",
+    "consistent-return": "off"
   }
 }
