--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,24 +13,27 @@
     },
     "plugins": [
         "jest"
-      ],
+    ],
+    "globals": {
+        "firestore": "readonly",
+        "fs": "readonly"
+    },
     "rules": {
-        "import/no-unresolved": "off",
         "linebreak-style": 0,
-        "import/prefer-default-export": "off",
-        "no-console": "off",
-        "import/extensions": 0,
-        "no-alert": "off",
         "prefer-destructuring": 0,
-        "consistent-return": "off",
-        "arrow-body-style": "off",
-        "no-param-reassign": "off",
-        "import/no-cycle": "off",
-        "object-shorthand": 0,
+        "import/extensions": 0,
+        "import/prefer-default-export": 0,
         "jest/no-disabled-tests": "warn",
         "jest/no-focused-tests": "error",
         "jest/no-identical-title": "error",
         "jest/prefer-to-have-length": "warn",
-        "jest/valid-expect": "error"
+        "jest/valid-expect": "error",
+        "no-console": "off",
+        "consistent-return": "off",
+        "no-alert": "off",
+        "arrow-body-style": "off",
+        "no-param-reassign": "off",
+        "import/no-cycle": "off",
+        "no-undef": "off"
     }
 }
