--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-jest": "^26.3.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.1",
     "eslint-plugin-jest": "^24.3.6",
     "htmlhint": "^0.14.0",
     "jest": "^26.4.2",
@@ -37,6 +38,7 @@
   },
   "dependencies": {
     "eslint-config-airbnb": "^18.2.1",
+    "firebase": "^8.6.1",
     "firebase-mock": "^2.3.2"
   }
 }
