--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.23.1",
     "eslint-plugin-jest": "^24.3.6",
+    "firebase-mock": "^2.3.2",
     "htmlhint": "^0.14.0",
     "jest": "^26.4.2",
     "mock-cloud-firestore": "^0.12.0",
@@ -36,7 +37,5 @@
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {
-    "firebase-mock": "^2.3.2"
-  }
+  "dependencies": {}
 }
