--- a/.eslintrc
+++ b/.eslintrc
@@ -34,6 +34,7 @@
     "no-alert": "off",
     "arrow-body-style": "off",
     "no-param-reassign": "off",
-    "import/no-cycle": "off"
+    "import/no-cycle": "off",
+    "dot-notation": "off"
   }
 }
